Server: add input validations
