# server/docs/swagger.json
@@ -263,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateUserOpts"
+                            "$ref": "#/definitions/user.RegisterInput"
                         }
                     }
                 ],
@@ -369,24 +369,33 @@
             "type": "string",
             "enum": [
                 "software",
-                "social_sciences"
+                "social_sciences",
+                "other"
             ],
             "x-enum-varnames": [
                 "Software",
-                "SocialSciences"
+                "SocialSciences",
+                "Other"
             ]
         },
         "topic.CreateInput": {
             "type": "object",
+            "required": [
+                "capacity",
+                "category",
+                "title"
+            ],
             "properties": {
                 "capacity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 },
                 "category": {
                     "$ref": "#/definitions/topic.Category"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 }
             }
         },
@@ -428,36 +437,56 @@
                 }
             }
         },
-        "user.CreateUserOpts": {
+        "user.LoginInput": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 6
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 24,
+                    "minLength": 3
+                }
+            }
+        },
+        "user.RegisterInput": {
+            "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 6
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.LoginInput": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 24,
+                    "minLength": 3
                 }
             }
         },
         "user.UpdatePasswordInput": {
             "type": "object",
+            "required": [
+                "new_password",
+                "password"
+            ],
             "properties": {
                 "new_password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 6
                 },
                 "password": {
                     "type": "string"
